--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -3,10 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="144dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="2dp"
     android:padding="10dp"
     android:background="@color/white">
+
+    <!-- Rating Bar -->
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="246dp"
+        android:layout_height="44dp"
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        android:numStars="5"
+        android:rating="4.5"
+        android:stepSize="0.2"
+        android:secondaryProgressTint="@color/color_light_green2"
+        android:progressTint="@color/color_light_green"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="201dp"
+        tools:layout_editor_absoluteY="-8dp" />
 
     <!-- Gambar Profil -->
     <ImageView
@@ -14,14 +30,13 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
         android:background="@drawable/rounded_image_user"
         android:clipToOutline="true"
         android:contentDescription="@string/name_kuliner"
         android:scaleType="centerCrop"
         android:src="@drawable/food_1"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ratingBar"
         tools:ignore="UnusedAttribute" />
 
     <!-- Nama User -->
@@ -74,6 +89,6 @@
         android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@id/Tv_deskripsiFeedback"
         app:layout_constraintStart_toStartOf="@id/Tv_deskripsiFeedback"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
