--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -33,7 +33,8 @@
             android:gravity="center"
             android:text="@string/sign_in"
             android:textColor="@color/color_green"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            tools:ignore="TextContrastCheck" />
 
         <!-- Subtitle Text -->
         <TextView
@@ -46,7 +47,8 @@
             android:gravity="center"
             android:text="@string/welcome_back_message"
             android:textColor="#B2ACAC"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:ignore="TextContrastCheck" />
 
         <!-- Email Section -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -78,9 +80,10 @@
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@id/email"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/email"
+                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- Password Section -->
@@ -113,9 +116,10 @@
                 android:inputType="textPassword"
                 android:padding="12dp"
                 android:textColor="#9F9696"
-                app:layout_constraintTop_toBottomOf="@id/password"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/password"
+                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
 
             <ImageView
                 android:id="@+id/passwordToggleLogin"
@@ -125,7 +129,8 @@
                 android:src="@drawable/ic_visibility_off"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/passwordInputLogin"
-                app:layout_constraintBottom_toBottomOf="@id/passwordInputLogin" />
+                app:layout_constraintBottom_toBottomOf="@id/passwordInputLogin"
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- Forgot Password Link -->
@@ -146,15 +151,16 @@
             android:id="@+id/LoginButton"
             android:layout_width="match_parent"
             android:layout_height="57dp"
-            android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="#54BF4C"
             android:fontFamily="@font/poppins_semi_bold"
             android:padding="12dp"
             android:text="@string/sign_in"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            app:cornerRadius="20dp" />
+            app:cornerRadius="20dp"
+            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />
 
         <!-- Google Sign In Button -->
         <com.google.android.material.button.MaterialButton
@@ -170,11 +176,9 @@
             android:text="@string/sign_in_with_google"
             android:textColor="@color/black"
             app:cornerRadius="20dp"
-            app:icon="@drawable/icon_g"
-            app:iconGravity="textStart"
-            app:iconPadding="8dp"
             app:strokeColor="@color/color_green"
-            app:strokeWidth="1dp" />
+            app:strokeWidth="1dp"
+            tools:ignore="VisualLintButtonSize" />
 
         <!-- Existing Account Section -->
         <LinearLayout
