--- a/app/src/main/res/layout/onboarding_4.xml
+++ b/app/src/main/res/layout/onboarding_4.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/gambar_onboarding4" />
+        android:src="@drawable/gambar_onboarding4"
+        android:layout_marginBottom="16dp"/>
 
     <TextView
         android:layout_width="wrap_content"
